@@ -75,6 +75,16 @@ Complete list of settings that you can put into ``testenv*`` sections:
     For eventually performing a call to ``subprocess.Popen(args, ...)``
     ``args`` are determined by splitting the whole command by whitespace.
 
+.. confval:: whitelist_externals=MULTI-LINE-LIST
+
+    each line specifies a command name (in glob-style pattern format)
+    which can be used in the ``commands`` section without triggering
+    a "not installed in virtualenv" warning.  Example: if you use the 
+    unix ``make`` for running tests you can list ``whitelist_externals=make``
+    or ``whitelist_externals=/usr/bin/make`` if you want more precision.
+    If you don't want tox to issue a warning in any case, just use
+   ``whitelist_externals=*`` which will match all commands (not recommended).
+
 .. confval:: changedir=path
 
     change to this working directory when executing the test command.
